--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"animejs": "^2.2.0",
 		"fullpage.js": "^2.9.7",
 		"node-sass": "^4.8.3"
 	}
