--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "parcel index.html"
+		"start": "parcel index.html --open",
+		"build":
+			"parcel build index.html --public-url http://sean-harrington.com/ar2018/"
 	},
 	"author": "",
 	"license": "ISC",
