--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "parcel index.html --open",
 		"build":
-			"parcel build index.html --public-url http://sean-harrington.com/ar2018/"
+			"parcel build index.html --no-minify --public-url http://sean-harrington.com/ar2018/"
 	},
 	"author": "",
 	"license": "ISC",
