Mobile edits, share links
Signed-off-by: Sean Harrington <sean@never-not.com>

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "parcel index.html --open",
-		"build":
-			"rm -rf dist/* && parcel build index.html --no-minify --public-url ./"
+		"build": "rm -rf dist/* && parcel build index.html --no-minify --public-url ./"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"animejs": "^2.2.0",
+		"clipboard": "^2.0.0",
 		"fullpage.js": "^2.9.7",
 		"node-sass": "^4.8.3"
 	}
