--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "parcel index.hbs --open",
-		"build": "rm -rf dist/* && parcel build index.hbs --no-minify --public-url ./"
+		"build":
+			"rm -rf dist/* && parcel build index.hbs --no-minify --public-url ./"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"animejs": "^2.2.0",
+		"autoprefixer": "^8.4.1",
 		"clipboard": "^2.0.0",
 		"fullpage.js": "^2.9.7",
 		"node-sass": "^4.8.3",
