divide sections into partials, move partials, loop over titles for rightsidebar

--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-	"name": "fhiar18",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "parcel index.hbs --open",
-		"build":
-			"rm -rf dist/* && parcel build index.hbs --no-minify --public-url ./"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"animejs": "^2.2.0",
-		"autoprefixer": "^8.4.1",
-		"clipboard": "^2.0.0",
-		"fullpage.js": "^2.9.7",
-		"node-sass": "^4.8.3",
-		"parcel-plugin-handlebars": "^0.4.4",
-		"promise-polyfill": "^7.1.2"
-	}
+  "name": "fhiar18",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel markup/index.hbs --open",
+    "build": "rm -rf dist/* && parcel build markup/index.hbs --no-minify --public-url ./"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "animejs": "^2.2.0",
+    "autoprefixer": "^8.4.1",
+    "clipboard": "^2.0.0",
+    "fullpage.js": "^2.9.7",
+    "node-sass": "^4.11.0",
+    "parcel-plugin-handlebars": "^0.4.4",
+    "promise-polyfill": "^7.1.2"
+  }
 }
