--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clear": "rm -rf .cache",
-    "start": "parcel markup/index.hbs --open",
+    "start": "parcel markup/index.hbs",
     "build": "rm -rf dist/* && parcel build markup/index.hbs --no-minify --public-url ./"
   },
   "author": "",
