--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^8.4.1",
     "clipboard": "^2.0.0",
     "fullpage.js": "^2.9.7",
+    "gsap": "^2.1.2",
     "node-sass": "^4.11.0",
     "parcel-plugin-handlebars": "^0.4.4",
     "promise-polyfill": "^7.1.2"
