--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clear": "rm -rf .cache",
     "start": "parcel markup/index.hbs no-cache",
-    "build": "rm -rf dist/* && parcel build markup/index.hbs --no-minify --public-url ./"
+    "build": "rm -rf dist/* && rm -rf .cache && parcel build markup/index.hbs --no-minify --public-url ./"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,7 @@
     "clipboard": "^2.0.0",
     "fullpage.js": "^2.9.7",
     "gsap": "^2.1.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "parcel-plugin-handlebars": "^0.4.4",
     "promise-polyfill": "^7.1.2"
   }
